Add plat detail

--- a/search_result.html
+++ b/search_result.html
@@ -3,7 +3,7 @@
  * @author: ZHU Fangda
  * @Date: 2020-01-31 15:12:00
  * @LastEditors  : ZHU Fangda
- * @LastEditTime : 2020-01-31 17:32:19
+ * @LastEditTime : 2020-02-03 21:24:30
  -->
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -43,7 +43,7 @@
         <button>282 Kcal</button>
       </div>
         
-      <div class="results">
+      <div class="results" onclick="location.href='plat_detail.html'">
         <div class="result">
           <img src="img/menu1.png">
           <div class="content">
