Change portail page
1. Modify portail interface
2. Add function to save the date in portail interface

--- a/record.html
+++ b/record.html
@@ -3,7 +3,7 @@
  * @author ZHU Fangda
  * @Date 2020-01-28 195242
  * @LastEditors  : ZHU Fangda
- * @LastEditTime : 2020-01-30 17:03:07
+ * @LastEditTime : 2020-02-04 12:23:46
  -->
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -29,17 +29,15 @@
     <![endif]-->
 
     <div id="container">
-      <div class="toolbar">
-        <h1>Daily Calorie Record</h1>
-      </div>
+      <h1>Daily Calorie Record</h1>
       
       <div id="chart">
-        <img src="img/record_chart.svg" width="325px">
+        <img src="img/record_chart.svg" width="100%">
       </div>
   
       <div id="scan">
         <img src="img/add.svg">
-        <img src="img/scan.svg">
+        <img src="img/scan.svg" onclick="location.href='scan.html'">
       </div>
 
       <div class="record-list">
