--- a/step1.html
+++ b/step1.html
@@ -26,9 +26,9 @@
 
 
         <h1>Current weight</h1>
-        <div class="input-group">
+        <div class="input-text">
             <input type="text" class="form-control" id="weight" placeholder="Weight">
-            <span class="input-group-addon">kg</span>
+            <span class="input-text-addon">kg</span>
         </div>
 
 
@@ -38,9 +38,9 @@
             <span id="show_text">0.0 kg</span>
         </div>
 
-        <div class="input-group">
+        <div class="input-text">
             <input type="text" class="form-control" id="hope_weight" placeholder="Weight" onkeyup="synText(event)">
-            <span class="input-group-addon">kg</span>
+            <span class="input-text-addon">kg</span>
         </div>
 
 
