--- a/command.html
+++ b/command.html
@@ -2,8 +2,8 @@
  * @description  
  * @author ZHU Fangda
  * @Date 2020-01-28 195242
- * @LastEditors  : ZHU Fangda
- * @LastEditTime : 2020-02-04 16:11:16
+ * @LastEditors: ZHU Fangda
+ * @LastEditTime: 2020-03-28 17:03:16
  -->
 <!DOCTYPE html>
 <html> 
@@ -34,7 +34,8 @@
     
 
     <div id="container">
-      <h1>Easy take to healthy food</h1>
+      <p></p>
+      <h1>Easy take to </br> healthy food</h1>
 
       <div class="item">
         <div class="photo_desp">
@@ -45,7 +46,7 @@
         </div>
   
         <div class="card">
-          <legend>Fruits and vegetables juice</legend>
+          <legend>Protein drink</legend>
           <div class="choose-amount ">
             <img src="img/minus_item.svg" class="btn_minus" onclick="minus('quantity_prod1')">
             <div class="quantity" id="quantity_prod1"></div>
@@ -83,7 +84,7 @@
         </div>
   
         <div class="card">
-          <legend>Protein drink</legend>
+          <legend>Fruits and vegetables juice</legend>
           <div class="choose-amount ">
             <img src="img/minus_item.svg" class="btn_minus" onclick="minus('quantity_prod3')">
             <div class="quantity" id="quantity_prod3"></div>
