--- a/search_result.html
+++ b/search_result.html
@@ -2,8 +2,8 @@
  * @description:  
  * @author: ZHU Fangda
  * @Date: 2020-01-31 15:12:00
- * @LastEditors  : ZHU Fangda
- * @LastEditTime : 2020-02-03 21:24:30
+ * @LastEditors: ZHU Fangda
+ * @LastEditTime: 2020-03-28 17:43:52
  -->
 <!DOCTYPE html>
 <!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
@@ -60,7 +60,7 @@
         <div class="result">
           <img src="img/menu2.png">
           <div class="content">
-            <h1>Chicken<br>Curry</h1>
+            <h1>Chicken Curry</h1>
             <p>
               Chicken breast 150g, 
               Carrot 100g,
